Fixed Home text wrapping

--- a/src/client/pages/Home/Home.page.scss
+++ b/src/client/pages/Home/Home.page.scss
@@ -55,7 +55,7 @@
   margin-top: $theme-unit;
   text-align: center;
 
-  @media (min-width: $theme-breakpoints-xl) {
+  @media (min-width: $theme-breakpoints-md) {
     margin-top: $theme-unit * 2;
   }
 }
